hoàn thiện lai trang chu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- PRODUCTS -->
     <section id="products" class="container py-5">
-        <h2 class="text-center mb-4 text-warning">Sản phẩm nổi bật</h2>
+        <h2 class="text-center mb-4 text-warning">Sản phẩm nổi bật của cửa hàng</h2>
 
         <div class="row g-4">
             <div class="col-md-4">
